--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "tsv": "^0.2.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "typescript": "~3.2.2"
+
   },
   "devDependencies": {
     "@angular/language-service": "~7.2.0",
@@ -49,7 +51,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "tslint": "~5.11.0"
   }
 }
