--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "echo Skip build on Heroku"
   },
-  "postinstall": "ng build --aot -prod",
 
   "private": true,
   "dependencies": {
